# kvs

./: Cargo.toml
benches/: benches.rs
src/: client.rs  engines.rs  error.rs  kv.rs  lib.rs  server.rs  transport.rs
src/engines/: kvs.rs  sled.rs
tests/: cli.rs  tests.rs
