[package]
name = "kvs"
version = "0.1.0"
edition = "2021"
authors = ["Bo-Wei Chen <tim.chenbw@gmail.com>"]
description = "A key-value store"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1.7.0", features = ["v4", "fast-rng"] }

[dev-dependencies]
# assert_cmd = "2.0.0"
# predicates = "3.0.0"
assert_cmd = "0.11.0"
predicates = "1.0.0"
tempfile = "3.0.7"
walkdir = "2.2.7"
