[package]
name = "kvs"
version = "0.1.0"
edition = "2021"
authors = ["Bo-Wei Chen <tim.chenbw@gmail.com>"]
description = "A key-value store"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1.7.0", features = ["v4", "fast-rng"] }
log = "0.4.21"
env_logger = "0.11.3"
sled = "0.34.7"

[dev-dependencies]
assert_cmd = "0.11"
criterion = "0.3"
predicates = "1.0.0"
rand = "0.6.5"
tempfile = "3.0.7"
walkdir = "2.2.7"

[[bench]]
name = "benches"
harness = false
